# wio-examples-template

./: Cargo.toml  README.md  cargo-generate.toml
examples/: 10-2-mic_fft.rs  6-2-led_and_button.rs  6-2-led_and_button_driver.rs  6-3-echo.rs  6-3-panic_handler_global.rs  6-3-panic_handler_safe.rs  6-3-uart.rs  6-4-timer_busy_wait.rs  6-4-timer_interrupt.rs  6-5-buzzer_pwm.rs  6-5-buzzer_simple.rs  6-6-light_sensor.rs  6-7-accelerometer_serial.rs  6-7-i2c_read_device_id.rs  7-3-spi_read_display_power_mode.rs  7-4-hello_lcd.rs  7-4-splash.rs  8-1-stop_watch.rs  8-2-led_and_button_driver.rs  8-2-mic_fft.rs  8-4-timer_busy_wait.rs  8-4-timer_interrupt.rs  8-6-light_sensor.rs  8-7-accelerometer_serial.rs  9-4-hello_lcd.rs  9-4-splash.rs  accelerometer_lcd.rs
